...
    <string name="label_beacon_detail">Beacon detail</string>

    <!-- Options Menu -->

    <string name="action_medium">View Medium Article</string>
    <string name="action_github">View on GitHub</string>
    <string name="action_done">done</string>
    <string name="action_edit">edit</string>
    <string name="action_add_attachment">Add Attachment</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>

    <!-- Detail Activity -->

    <string name="fragment_title_properties">Properties</string>
    <string name="fragment_title_alerts">Diagnostics</string>

    <!-- Beacon Card -->

    <string name="text_view">View</string>
    <string name="text_update">Update</string>
    <string name="text_attachments">Attachments</string>
...
    <string name="hint_longitude">Longitude</string>
    <string name="hint_places_id">Google Places ID</string>


    <!-- Alerts -->

    <string name="text_title_estimated_battery">Est. Low Battery</string>
    <string name="text_title_alerts">Alerts</string>
    <string name="text_battery_unknown">Unknown</string>

    <!-- Attachments -->

    <string name="hint_data">Data</string>

    <!-- Error Messages -->

    <string name="text_no_beacons">Sorry, no beacons to display</string>
    <string name="text_no_attachments">Sorry, no attachments to display</string>
    <string name="text_no_alerts">Sorry, no alerts to display</string>

    <string name="error_message_play_services">Sorry, you need Google Play Services to use this app :(</string>
    <string name="error_message_advertised_id">The Advertised ID cannot be blank</string>
    <string name="error_message_status">The beacon status cannot be blank</string>
    <string name="error_message_attachment_data">The attachment data cannot be blank</string>
    <string name="error_advertised_id">Advertised Id is required</string>
...
