...
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/text_battery_title"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:text="@string/text_title_estimated_battery"/>

    <TextView
        android:id="@+id/text_battery_date"
...
